--- a/Raziskovalna_hitrost_pisanja_v_ram/FPGABlinkLED/projects/MKRVIDOR4000_template/MKRVIDOR4000.qsf
+++ b/Raziskovalna_hitrost_pisanja_v_ram/FPGABlinkLED/projects/MKRVIDOR4000_template/MKRVIDOR4000.qsf
@@ -95,5 +95,9 @@ set_global_assignment -name QIP_FILE ../../ip/SYSTEM_PLL/SYSTEM_PLL.qip
 set_global_assignment -name VERILOG_FILE MKRVIDOR4000_top.v
 set_global_assignment -name VERILOG_FILE VGA_800x600.v
 set_global_assignment -name VERILOG_FILE VGA_640x480.v
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name VERILOG_FILE true_dual_port_ram_dual_clock.v
+set_global_assignment -name VERILOG_FILE glyphmap.v
+set_global_assignment -name VERILOG_FILE console.v
+set_global_assignment -name VERILOG_FILE attributemap.v
+set_global_assignment -name VERILOG_FILE SDRAM_ctrl.v
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
